a lot of css adjustments. Fixed css flip animation not working properly in different web browsers, adjusted study button placement higher, slightly reduced size of character tables to fit properly on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@ body {
     align-content: center;
     justify-content: center;
     align-items: center;
-    height: 75vh;
-    padding: 15px
+    height: 90vh;
+    padding: 15px;
+    padding-bottom: 50px;
 }
 
 .about {
@@ -28,6 +29,12 @@ body {
     z-index: -1;
     left: 50%;
     top: 50%;
+    /* -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); */
+    /* -ms-transform: translate(-50%, -50%); */
+    /* -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     transform: translate(-50%, -50%);
 }
 
@@ -36,7 +43,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     border: solid;
     text-align: center;
@@ -48,9 +55,9 @@ body {
 }
 
 .characters {
-    flex-basis: 18%;
+    flex-basis: 19%;
     border: solid;
-    padding: 20px;
+    padding: 18px;
     border-radius: 10px;
     background-color: #f3ebeb;
 }
@@ -62,6 +69,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 85vh;
+    position:absolute;
+    z-index: 1;
+    width:100%;
 }
 
 .card {
@@ -77,23 +87,32 @@ body {
     border-radius: 10px;
     box-shadow: 5px 5px 20px; 
 
-    position:absolute;
-    transform-style: preserve-3d;
-    transition: all 0.5s ease;
-    -webkit-backface-visibility: hidden; backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d; transform-style: preserve-3d;
+    /* transform-style: preserve-3d; */
+    -webkit-transition: all 0.5s ease; transition: all 0.5s ease;
+    /* transition: all 0.5s ease; */
+    
 }
 
 .front-card {
     position: absolute;
-    /* backface-visibility: hidden; */
-    -webkit-backface-visibility: hidden; backface-visibility: hidden;
+    backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden; backface-visibility: hidden; */
+    transform: rotateX(0deg);
 }
 
 .back-card {
     position:absolute;
-    /* backface-visibility: hidden; */
-    -webkit-backface-visibility: hidden; backface-visibility: hidden;
-    transform: rotateY(180deg)
+    /* z-index: 2; */
+    backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden; backface-visibility: hidden; */
+    /* -webkit-transform: rotateY(180deg); transform: rotateY(180deg); */
+    /* -ms-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg); */
+    transform: rotateY(180deg);
+    /* transform-style: preserve-3d; */
 }
 
 .number-of {
@@ -102,6 +121,10 @@ body {
 }
 
 .buttons {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    top: 91vh;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -113,14 +136,13 @@ body {
     color: #bd2842;
     background-color: #dcba9d;
     border: solid black 3px;
-    margin-top: 5px;
-    width: 100px;
-    /* height: 28px; */
-    height: 55px;
+    width: 125px;
+    height: 50px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0px 5px 0px;
     cursor: pointer;
+    line-height: 2.5;
 }
 
 .study-info {
@@ -141,6 +163,7 @@ body {
 
 .quiz-bar {
     position: absolute;
+    z-index: 2;
     bottom: 0;
     display: flex;
     flex-direction: row;
@@ -214,4 +237,16 @@ body {
     top: 40.5vh;
     padding: 15px;
     text-align: center;
+}
+
+@media only screen and (max-width: 375px) {
+    .homepage {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        padding: 15px
+    }
 }
